--- a/exercises/10_2/package.json
+++ b/exercises/10_2/package.json
@@ -1,15 +1,12 @@
 {
   "name": "10_2",
-  "version": "1.0.0",
-  "main": "index.js",
   "scripts": {
-    "test": "jest"
+    "test": "jest --watchAll"
   },
-  "author": "",
-  "license": "ISC",
   "devDependencies": {
-    "jest": "^26.6.1"
+    "jest": "^26.6.3"
   },
-  "dependencies": {},
-  "description": ""
+  "dependencies": {
+    "jest": "^18.1.0"
+  }
 }
